# riscv-qcu

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/qcu_common/: Cargo.toml
crates/qcu_common/src/: lib.rs
crates/qcu_core/: Cargo.toml
crates/qcu_core/src/: allocator.rs  bit_utils.rs  decoder.rs  dsu.rs  graph.rs  hw.rs  hw_accel.rs  isa.rs  lib.rs  pauli_frame.rs  ring_buffer.rs  spmc.rs  static_vec.rs  vm.rs
crates/qcu_firmware/: Cargo.toml  build.rs  memory.x
crates/qcu_firmware/src/: console.rs  entry.S  main.rs  memory.rs  smp.rs  trap.rs
crates/qcu_firmware/src/drivers/: accelerator.rs  mod.rs
crates/qcu_host/: Cargo.toml
crates/qcu_host/src/: generator.rs  hil.rs  main.rs  stats.rs  stream.rs  throughput.rs
crates/qcu_host/src/visualizer/: mod.rs
crates/qcu_hw/: Cargo.toml  build.rs
crates/qcu_hw/src/: lib.rs  sim_main.cpp  union_find.sv
crates/qcu_hw/src/rtl/: top_soc.sv
crates/qcu_hw/src/rtl/accel/: union_find.sv
crates/qcu_hw/src/rtl/physics/: hamiltonian_engine.sv  noise_channel.sv  qubit_grid.sv
crates/qcu_hw/src/sim/: main.cpp
crates/qcu_io/: Cargo.toml
crates/qcu_io/src/: lib.rs  loader.rs  parser.rs
scripts/: benchmark_scaling.py  generate_stim_data.py  plot_fidelity.py  run.py
